--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,8 +14,8 @@ pipeline {
         GIT_REPO = 'http://forgejo.local/Neo/MockPlant.git'
 
         // Remote server credentials and details
-        REMOTE_SERVER = 'docker-install-server.local'
-        SSH_CREDENTIALS = 'docker-ssh-credentials-id'  // Jenkins SSH credentials ID
+        REMOTE_SERVER = 'jenkins-agent.local'
+        SSH_CREDENTIALS = 'docker-agent-id'  // Jenkins SSH credentials ID
         REMOTE_DIR = '~/mockplant' // Where to clone and build the image
     }
 
@@ -27,8 +27,8 @@ pipeline {
                     // SSH into the remote server to create the directory (if it doesn't exist)
                     sshagent([SSH_CREDENTIALS]) {
                         sh """
-                            ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} root@${REMOTE_SERVER} 'git clone ${GIT_REPO} ${REMOTE_DIR}'
-                            ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} root@${REMOTE_SERVER} 'cd ${REMOTE_DIR} && docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG} .'
+                            ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} jenkins@${REMOTE_SERVER} 'git clone ${GIT_REPO} ${REMOTE_DIR}'
+                            ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} jenkins@${REMOTE_SERVER} 'cd ${REMOTE_DIR} && docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG} .'
                         """
                     }
                 }
@@ -41,7 +41,7 @@ pipeline {
                     // Push the Docker image to the private registry from the remote server
                     sshagent([SSH_CREDENTIALS]) {
                         sh """
-                            ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} root@${REMOTE_SERVER} 'docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}'
+                            ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} jenkins@${REMOTE_SERVER} 'docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}'
                         """
                     }
                 }
@@ -55,7 +55,7 @@ pipeline {
                     // Pull the image from the registry to ensure it's available locally
                     sshagent([SSH_CREDENTIALS]) {
                         sh """
-                            ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} root@${REMOTE_SERVER} 'docker pull ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}'
+                            ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} jenkins@${REMOTE_SERVER} 'docker pull ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}'
                         """
                     }
                 }
@@ -68,7 +68,7 @@ pipeline {
             // Clean up on the remote server, if needed (e.g., remove unused images)
             sshagent([SSH_CREDENTIALS]) {
                 sh """
-                    ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} root@${REMOTE_SERVER} 'rm -d -R ${REMOTE_DIR} && docker system prune -af'
+                    ssh -o StrictHostKeyChecking=no -i ${SSH_CREDENTIALS} jenkins@${REMOTE_SERVER} 'rm -d -R ${REMOTE_DIR} && docker system prune -af'
                 """
             }
         }
