--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
     agent { label 'docker' }
 
     triggers {
-        pollSCM('H/5 * * * *') // Optional: use webhook for better efficiency
+        pollSCM('H/5 * * * *') // Optional: use webhook instead
     }
 
     environment {
@@ -11,35 +11,40 @@ pipeline {
         DOCKER_TAG = 'latest'
     }
 
+    // Run pipeline only for main branch
+    options {
+        skipDefaultCheckout() // avoid default checkout unless on 'main'
+    }
+
     stages {
-        // Remove this stage: Jenkins already does the checkout for you
-        // stage('Checkout Code') {
-        //     steps {
-        //         git credentialsId: 'forgejo-id', url: 'http://forgejo.local/Neo/MockPlant.git'
-        //     }
-        // }
-
-        stage('Build Docker Image') {
-            steps {
-                sh """
-                    docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG} .
-                """
+        stage('Build & Deploy') {
+            when {
+                branch 'main'
             }
-        }
+            stages {
+                stage('Build Docker Image') {
+                    steps {
+                        sh """
+                            docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG} .
+                        """
+                    }
+                }
 
-        stage('Push Docker Image') {
-            steps {
-                sh """
-                    docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
-                """
-            }
-        }
+                stage('Push Docker Image') {
+                    steps {
+                        sh """
+                            docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                        """
+                    }
+                }
 
-        stage('Pull Image to Verify') {
-            steps {
-                sh """
-                    docker pull ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
-                """
+                stage('Pull Image to Verify') {
+                    steps {
+                        sh """
+                            docker pull ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                        """
+                    }
+                }
             }
         }
     }
