--- a/imposters/imp3.yaml
+++ b/imposters/imp3.yaml
@@ -1,32 +1,31 @@
 imposter:
   name: Orders
-  description: "....."
   type: HTTP
 predicates:
   - predicate:
       method: POST
       path: /orders
     responses:
-      - when:
-          header:
-            Content-Type: application/json
+      - response:
+          code: 201
+          content: Order created successfully
+        when:
           body:
             status: new
-        response:
-          code: 201
-          content: "Order created successfully"
-      - when:
+          header:
+            Content-Type: application/json
+      - response:
+          code: 415
+          content: Unsupported Media Type
+        when:
           header:
             Content-Type: application/xml
-        response:
-          code: 415
-          content: "Unsupported Media Type"
-      - when:
+      - response:
+          code: 200
+          content: Order is in pending state
+        when:
           body:
             status: pending
-        response:
-          code: 200
-          content: "Order is in pending state"
       - response:
           code: 400
-          content: "Bad request"
+          content: Bad request
