--- a/imposters/imp4.yaml
+++ b/imposters/imp4.yaml
@@ -6,39 +6,39 @@ predicates:
       method: POST
       path: /orders2
     responses:
-      - response:
-          code: 201
-          content: High priority order created from mobile app
-        when:
-          body:
-            priority: high
-            status: new
+      - when:
           header:
             Content-Type: application/json
             X-Request-Source: mobile-app
-      - response:
-          code: 202
-          content: Low priority order accepted
-        when:
           body:
-            priority: low
             status: new
+            priority: high
+        response:
+          code: 201
+          content: "High priority order created from mobile app"
+      - when:
           header:
             Content-Type: application/json
-      - response:
-          code: 415
-          content: Unsupported Media Type for this API version
-        when:
+          body:
+            status: new
+            priority: low
+        response:
+          code: 202
+          content: "Low priority order accepted"
+      - when:
           header:
             Content-Type: application/xml
-            X-API-Version: '1.0'
-      - response:
-          code: 200
-          content: Pending order from guest user
-        when:
+            X-API-Version: "1.0"
+        response:
+          code: 415
+          content: "Unsupported Media Type for this API version"
+      - when:
           body:
             status: pending
             user: guest
+        response:
+          code: 200
+          content: "Pending order from guest user"
       - response:
           code: 400
-          content: Bad request
+          content: "Bad request"
