--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask
-requests
-python-dotenv
+Flask==3.0.2
+requests==2.31.0
+python-dotenv==1.0.1
 pyyaml
-Flask-Cors
+Flask-Cors==4.0.0
+waitress==3.0.0
+gunicorn==21.2.0
