--- a/imposters/imp2.yaml
+++ b/imposters/imp2.yaml
@@ -5,20 +5,22 @@ predicates:
   - predicate:
       method: GET
       path: /products
-      delay: 4ms
     responses:
       - response:
           code: 200
           content: Electronics products list
+          content_type: text/plain
         when:
           query:
             category: electronics
       - response:
           code: 200
           content: Clothing products list
+          content_type: text/plain
         when:
           query:
             category: clothing
       - response:
           code: 400
           content: Invalid category
+          content_type: text/plain
