--- a/imposters/test_content_types.yaml
+++ b/imposters/test_content_types.yaml
@@ -88,7 +88,7 @@ predicates:
           content: |
             {
               "status": "success",
-              "message": "Form uploaded successfully",
+              "message": "$file_name uploaded successfully",
             }
           content_type: application/json
         when:
