--- a/imposters/imp1.yaml
+++ b/imposters/imp1.yaml
@@ -11,6 +11,7 @@ predicates:
       - response:
           code: 200
           content: Hello $id
+          content_type: text/plain
   - predicate:
       method: PUT
       path: /users/$id
@@ -18,6 +19,7 @@ predicates:
       - response:
           code: 200
           content: Update success
+          content_type: text/plain
   - predicate:
       method: DELETE
       path: /users/$id
@@ -25,6 +27,7 @@ predicates:
       - response:
           code: 200
           content: Delete success
+          content_type: text/plain
   - predicate:
       method: POST
       path: /users/$id
@@ -32,3 +35,4 @@ predicates:
       - response:
           code: 200
           content: Add success
+          content_type: text/plain
