--- a/.forgejo/workflows/run.yml
+++ b/.forgejo/workflows/run.yml
@@ -17,7 +17,12 @@ jobs:
     name: Build Docker Image
     runs-on: neo-ubuntu
 
-    steps:                                                                                          
+    steps:
+      
+      - name: Adding NeoDNS Server
+        run: |
+          echo "nameserver 10.60.1.2" > /etc/resolv.conf
+          echo "nameserver 8.8.8.8" >> /etc/resolv.conf                                                                                           
 
       - name: Checkout Code
         uses: actions/checkout@v3
