--- a/.forgejo/workflows/run.yml
+++ b/.forgejo/workflows/run.yml
@@ -92,6 +92,17 @@ jobs:
           docker build -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:latest \
                        -t ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ needs.version-bump.outputs.new_tag }} .
 
+      - name: Trivy Scan (Security)
+        run: |
+          if ! command -v trivy >/dev/null; then
+            echo "Installing Trivy..."
+            curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+          fi
+
+          trivy image --no-progress --exit-code 1 \
+            ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${{ needs.version-bump.outputs.new_tag }} || \
+            echo "Trivy scan found vulnerabilities. Review above results."
+
       - name: Push Docker Images
         run: |
           docker push ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:latest
