--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask==3.0.2
-requests==2.31.0
-python-dotenv==1.0.1
+Flask
+requests
+python-dotenv
 pyyaml
-Flask-Cors==4.0.0
-waitress==3.0.0
-gunicorn==21.2.0
+Flask-Cors
+waitress
+gunicorn
+uvicorn
+asgiref
